--- a/Week_1/Python_basics/python_basics.ipynb
+++ b/Week_1/Python_basics/python_basics.ipynb
@@ -533,27 +533,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "def print_spiral_order(matrix):\n",
-    "    # TODO\n",
-    "    return None # default code"
+    "    if not matrix or not matrix[0]:\n",
+    "        return []\n",
+    "\n",
+    "    top, bottom = 0, len(matrix) - 1\n",
+    "    left, right = 0, len(matrix[0]) - 1\n",
+    "    spiral = []\n",
+    "\n",
+    "    while top <= bottom and left <= right:\n",
+    "        for col in range(left, right + 1):\n",
+    "            spiral.append(matrix[top][col])\n",
+    "        top += 1\n",
+    "\n",
+    "        for row in range(top, bottom + 1):\n",
+    "            spiral.append(matrix[row][right])\n",
+    "        right -= 1\n",
+    "\n",
+    "        if top <= bottom:\n",
+    "            for col in range(right, left - 1, -1):\n",
+    "                spiral.append(matrix[bottom][col])\n",
+    "            bottom -= 1\n",
+    "\n",
+    "        if left <= right:\n",
+    "            for row in range(bottom, top - 1, -1):\n",
+    "                spiral.append(matrix[row][left])\n",
+    "            left += 1\n",
+    "\n",
+    "    return spiral\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Case 1 Output: None\n",
-      "Test Case 2 Output: None\n",
-      "Test Case 3 Output: None\n",
+      "Test Case 1 Output: [1, 2, 3, 6, 9, 8, 7, 4, 5]\n",
+      "Test Case 2 Output: [1, 2, 3, 4, 8, 12, 16, 15, 14, 13, 9, 5, 6, 7, 11, 10]\n",
+      "Test Case 3 Output: [1, 2, 3, 4, 5, 10, 15, 20, 25, 24, 23, 22, 21, 16, 11, 6, 7, 8, 9, 14, 19, 18, 17, 12, 13]\n",
       " Test Case 1 Expected Output: [1, 2, 3, 6, 9, 8, 7, 4, 5]\n",
       "Test Case 2 Expected Output: [1, 2, 3, 4, 8, 12, 16, 15, 14, 13, 9, 5, 6, 7, 11, 10]\n",
       "Test Case 3 Expected Output: [1, 2, 3, 4, 5, 10, 15, 20, 25, 24, 23, 22, 21, 16, 11, 6, 7, 8, 9, 14, 19, 18, 17, 12, 13]\n",
@@ -608,15 +633,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6    18   15   5    12   13   7    14   10   \n",
-      "10   14   15   15   13   3    10   18   4    \n",
-      "2    13   11   2    7    5    15   17   5    \n",
-      "5    16   12   10   7    9    17   14   13   \n",
-      "8    15   18   11   1    1    4    19   4    \n",
-      "6    19   18   0    0    1    13   4    7    \n",
-      "14   5    18   18   5    5    11   5    9    \n",
-      "3    7    3    9    1    7    1    6    18   \n",
-      "6    18   3    19   11   16   16   15   6    \n"
+      "10   7    16   12   9    10   16   15   14   \n",
+      "13   15   12   6    2    17   17   5    15   \n",
+      "2    18   16   6    12   8    5    12   16   \n",
+      "9    16   16   16   0    15   8    17   8    \n",
+      "11   7    4    5    18   10   7    6    5    \n",
+      "10 7 16 12 9 10 16 15 14 15 16 8 5 6 7 10 18 5 4 7 11 9 2 13 15 12 6 2 17 17 5 12 17 8 15 0 16 16 16 18 16 6 12 8 5\n"
      ]
     }
    ],
@@ -660,18 +682,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "def count_word_frequency(sentence):\n",
-    "    # TODO\n",
-    "    return {} # Returning empty dictionary on default"
+    "    words = sentence.split()\n",
+    "    freq = {}\n",
+    "\n",
+    "    for word in words:\n",
+    "        if word in freq:\n",
+    "            freq[word] += 1\n",
+    "        else:\n",
+    "            freq[word] = 1\n",
+    "\n",
+    "    return freq\n",
+    "   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -680,23 +711,23 @@
      "text": [
       "Test Case 1:\n",
       "Input: Hello world Hello\n",
-      "Output: {}\n",
+      "Output: {'Hello': 2, 'world': 1}\n",
       "------------------------------\n",
       "Test Case 2:\n",
       "Input: Python is fun and Python is easy\n",
-      "Output: {}\n",
+      "Output: {'Python': 2, 'is': 2, 'fun': 1, 'and': 1, 'easy': 1}\n",
       "------------------------------\n",
       "Test Case 3:\n",
       "Input: One fish two fish red fish blue fish\n",
-      "Output: {}\n",
+      "Output: {'One': 1, 'fish': 4, 'two': 1, 'red': 1, 'blue': 1}\n",
       "------------------------------\n",
       "Test Case 4:\n",
       "Input: This is a test. This test is simple.\n",
-      "Output: {}\n",
+      "Output: {'This': 2, 'is': 2, 'a': 1, 'test.': 1, 'test': 1, 'simple.': 1}\n",
       "------------------------------\n",
       "Test Case 5:\n",
       "Input: Repeat repeat Repeat\n",
-      "Output: {}\n",
+      "Output: {'Repeat': 2, 'repeat': 1}\n",
       "------------------------------\n",
       "Test Case 6:\n",
       "Input: \n",
@@ -704,7 +735,7 @@
       "------------------------------\n",
       "Test Case 7:\n",
       "Input: Spaces       between      words\n",
-      "Output: {}\n",
+      "Output: {'Spaces': 1, 'between': 1, 'words': 1}\n",
       "------------------------------\n"
      ]
     }
@@ -767,29 +798,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_palindrome_iterative(s):\n",
-    "    # TODO\n",
-    "    return None"
+    "    left = 0\n",
+    "    right = len(s) - 1\n",
+    "\n",
+    "    while left < right:\n",
+    "        if s[left] != s[right]:\n",
+    "            return False\n",
+    "        left += 1\n",
+    "        right -= 1\n",
+    "    return True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_palindrome_recursive(s):\n",
-    "    # TODO\n",
-    "    return None"
+    "    if len(s) <= 1:\n",
+    "        return True\n",
+    "\n",
+    "    if s[0] != s[-1]:\n",
+    "        return False\n",
+    "\n",
+    "    return is_palindrome_recursive(s[1:-1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -797,46 +840,46 @@
      "output_type": "stream",
      "text": [
       "Test Case 1: Input = 'radar'\n",
-      "  Iterative Output: None\n",
-      "  Recursive Output: None\n",
+      "  Iterative Output: True\n",
+      "  Recursive Output: True\n",
       "  Expected Output: True\n",
-      "  Iterative Pass: False\n",
-      "  Recursive Pass: False\n",
+      "  Iterative Pass: True\n",
+      "  Recursive Pass: True\n",
       "------------------------------\n",
       "Test Case 2: Input = 'boommoob'\n",
-      "  Iterative Output: None\n",
-      "  Recursive Output: None\n",
+      "  Iterative Output: True\n",
+      "  Recursive Output: True\n",
       "  Expected Output: True\n",
-      "  Iterative Pass: False\n",
-      "  Recursive Pass: False\n",
+      "  Iterative Pass: True\n",
+      "  Recursive Pass: True\n",
       "------------------------------\n",
       "Test Case 3: Input = 'world'\n",
-      "  Iterative Output: None\n",
-      "  Recursive Output: None\n",
+      "  Iterative Output: False\n",
+      "  Recursive Output: False\n",
       "  Expected Output: False\n",
-      "  Iterative Pass: False\n",
-      "  Recursive Pass: False\n",
+      "  Iterative Pass: True\n",
+      "  Recursive Pass: True\n",
       "------------------------------\n",
       "Test Case 4: Input = 'a'\n",
-      "  Iterative Output: None\n",
-      "  Recursive Output: None\n",
+      "  Iterative Output: True\n",
+      "  Recursive Output: True\n",
       "  Expected Output: True\n",
-      "  Iterative Pass: False\n",
-      "  Recursive Pass: False\n",
+      "  Iterative Pass: True\n",
+      "  Recursive Pass: True\n",
       "------------------------------\n",
       "Test Case 5: Input = ''\n",
-      "  Iterative Output: None\n",
-      "  Recursive Output: None\n",
+      "  Iterative Output: True\n",
+      "  Recursive Output: True\n",
       "  Expected Output: True\n",
-      "  Iterative Pass: False\n",
-      "  Recursive Pass: False\n",
+      "  Iterative Pass: True\n",
+      "  Recursive Pass: True\n",
       "------------------------------\n",
       "Test Case 6: Input = 'RadAr'\n",
-      "  Iterative Output: None\n",
-      "  Recursive Output: None\n",
+      "  Iterative Output: False\n",
+      "  Recursive Output: False\n",
       "  Expected Output: False\n",
-      "  Iterative Pass: False\n",
-      "  Recursive Pass: False\n",
+      "  Iterative Pass: True\n",
+      "  Recursive Pass: True\n",
       "------------------------------\n"
      ]
     }
@@ -901,18 +944,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_prime(n):\n",
-    "    # TODO\n",
-    "    return None"
+    "    if n <= 1:\n",
+    "        return False\n",
+    "\n",
+    "    for i in range(2, int(n ** 0.5) + 1):\n",
+    "        if n % i == 0:\n",
+    "            return False\n",
+    "\n",
+    "    return True\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -920,54 +969,54 @@
      "output_type": "stream",
      "text": [
       "Test Case 1: Input = 2\n",
-      "  Output: None\n",
+      "  Output: True\n",
       "  Expected Output: True\n",
-      "  Pass: False\n",
+      "  Pass: True\n",
       "------------------------------\n",
       "Test Case 2: Input = 3\n",
-      "  Output: None\n",
+      "  Output: True\n",
       "  Expected Output: True\n",
-      "  Pass: False\n",
+      "  Pass: True\n",
       "------------------------------\n",
       "Test Case 3: Input = 4\n",
-      "  Output: None\n",
+      "  Output: False\n",
       "  Expected Output: False\n",
-      "  Pass: False\n",
+      "  Pass: True\n",
       "------------------------------\n",
       "Test Case 4: Input = 17\n",
-      "  Output: None\n",
+      "  Output: True\n",
       "  Expected Output: True\n",
-      "  Pass: False\n",
+      "  Pass: True\n",
       "------------------------------\n",
       "Test Case 5: Input = 19\n",
-      "  Output: None\n",
+      "  Output: True\n",
       "  Expected Output: True\n",
-      "  Pass: False\n",
+      "  Pass: True\n",
       "------------------------------\n",
       "Test Case 6: Input = 20\n",
-      "  Output: None\n",
+      "  Output: False\n",
       "  Expected Output: False\n",
-      "  Pass: False\n",
+      "  Pass: True\n",
       "------------------------------\n",
       "Test Case 7: Input = 1\n",
-      "  Output: None\n",
+      "  Output: False\n",
       "  Expected Output: False\n",
-      "  Pass: False\n",
+      "  Pass: True\n",
       "------------------------------\n",
       "Test Case 8: Input = 0\n",
-      "  Output: None\n",
+      "  Output: False\n",
       "  Expected Output: False\n",
-      "  Pass: False\n",
+      "  Pass: True\n",
       "------------------------------\n",
       "Test Case 9: Input = -5\n",
-      "  Output: None\n",
+      "  Output: False\n",
       "  Expected Output: False\n",
-      "  Pass: False\n",
+      "  Pass: True\n",
       "------------------------------\n",
       "Test Case 10: Input = 97\n",
-      "  Output: None\n",
+      "  Output: True\n",
       "  Expected Output: True\n",
-      "  Pass: False\n",
+      "  Pass: True\n",
       "------------------------------\n"
      ]
     }
@@ -996,6 +1045,13 @@
     "    print(f\"  Pass: {result == expected}\")\n",
     "    print(\"-\" * 30)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1014,7 +1070,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
