--- a/Week_1/Python_libraries/Numpy/numpy_basics.ipynb
+++ b/Week_1/Python_libraries/Numpy/numpy_basics.ipynb
@@ -41,9 +41,9 @@
       "Range Array: [0 2 4 6 8]\n",
       "Linspace Array: [0.   0.25 0.5  0.75 1.  ]\n",
       "Random Array:\n",
-      " [[0.20862537 0.05008008 0.60450592]\n",
-      " [0.15058016 0.29360468 0.73718961]\n",
-      " [0.19184243 0.98138688 0.86458117]]\n"
+      " [[0.7257985  0.94432858 0.56527126]\n",
+      " [0.4016875  0.30594587 0.56828024]\n",
+      " [0.67631978 0.62925136 0.67368498]]\n"
      ]
     }
    ],
@@ -324,11 +324,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array after transpose:\n",
+      " [[0.76673808 2.26469658 5.49304527 0.92967597 2.65895405 5.60023219\n",
+      "  0.92803192 2.7052008  5.59965557]\n",
+      " [0.24394317 4.04576853 3.17570495 0.64270087 4.05874616 3.80243718\n",
+      "  0.06252677 4.30565524 3.47897708]]\n",
+      "\n",
+      "Mean value: 2.8201494654168595\n",
+      "\n",
+      "Locations where elements > mean:\n",
+      "(array([0, 0, 0, 1, 1, 1, 1, 1, 1]), array([2, 5, 8, 1, 2, 4, 5, 7, 8]))\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO"
+    "import numpy as np\n",
+    "arr = np.random.rand(3,6)\n",
+    "new_arr = np.array([0,0,2,4,5,3])\n",
+    "arr = arr + new_arr\n",
+    "arr = arr.reshape(9, 2)\n",
+    "arr_transpose = arr.T\n",
+    "arr_mean = arr_transpose.mean()\n",
+    "\n",
+    "locations = np.where(arr_transpose>arr_mean)\n",
+    "print(\"Array after transpose:\\n\", arr_transpose)\n",
+    "print(\"\\nMean value:\", arr_mean)\n",
+    "print(\"\\nLocations where elements > mean:\")\n",
+    "print(locations)"
    ]
   },
   {
@@ -357,13 +386,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Poisson Array: [7 5 5 8 6 3 2 3 2 6 5 6 4 7 4 3 4 3 5 2]\n",
+      "Mean: 4.5\n",
+      "Standard Deviation: 1.746424919657298\n",
+      "Centered Array: [ 2.5  0.5  0.5  3.5  1.5 -1.5 -2.5 -1.5 -2.5  1.5  0.5  1.5 -0.5  2.5\n",
+      " -0.5 -1.5 -0.5 -1.5  0.5 -2.5]\n",
+      "Normalized Array: [ 1.43149584  0.28629917  0.28629917  2.00409417  0.8588975  -0.8588975\n",
+      " -1.43149584 -0.8588975  -1.43149584  0.8588975   0.28629917  0.8588975\n",
+      " -0.28629917  1.43149584 -0.28629917 -0.8588975  -0.28629917 -0.8588975\n",
+      "  0.28629917 -1.43149584]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "poisson_arr = np.random.poisson(lam=5, size=20)\n",
+    "mean_val = poisson_arr.mean()\n",
+    "centered_arr = poisson_arr - mean_val\n",
+    "std_val = poisson_arr.std()\n",
+    "normalized_arr = centered_arr / std_val\n",
+    "print(\"Poisson Array:\", poisson_arr)\n",
+    "print(\"Mean:\", mean_val)\n",
+    "print(\"Standard Deviation:\", std_val)\n",
+    "print(\"Centered Array:\", centered_arr)\n",
+    "print(\"Normalized Array:\", normalized_arr)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# TODO\n",
-    "# Hint use np.random.poisson"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -382,7 +443,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
